<resources>
    <string name="app_name">Calculadora</string>
    <string name="ac">AC</string>
    <string name="RaizCuadrada">√</string>
    <string name="PorCiento">%</string>
    <string name="Dividir">÷</string>
    <string name="numSiete">7</string>
    <string name="numOcho">8</string>
    <string name="numNueve">9</string>
    <string name="Multiplicar">X</string>
    <string name="numCuatro">4</string>
    <string name="numCinco">5</string>
    <string name="numSeis">6</string>
    <string name="Restar">-</string>
    <string name="numUno">1</string>
    <string name="numDos">2</string>
    <string name="numTres">3</string>
    <string name="Sumar">+</string>
    <string name="numZero">0</string>
    <string name="Coma">,</string>
    <string name="Igual">=</string>

    <string name="settings_name">SETTINGS</string>
    <string name="exit_name">EXIT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="opcionOperaciones">Habilitar/deshabilitar operaciones de cálculo</string>

    <!--colores para las teclas de operandos-->
    <string-array name="color_TeclasOperandos">
        <item name="Rojo">Rojo</item>
        <item name="Morado">Morado</item>
        <item name="Azul oscuro">Azul oscuro</item>
        <item name="Azul claro">Azul claro</item>
        <item name="Verde oscuro">Verde oscuro</item>
        <item name="Amarillo">Amarillo</item>
    </string-array>

    <!--colores para las teclas de las operaciones-->
    <string-array name="color_TeclasOperaciones">
        <item name="Gris">Gris</item>
        <item name="Marron">Marron</item>
        <item name="Naranja">Naranja</item>
        <item name="Verde claro">Verde claro</item>
        <item name="Azul turquesa">Azul turquesa</item>
        <item name="Lila">Lila</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
